# rs-arcade

./: Cargo.toml
resources/: settings.json  settings.toml
src/: config.rs  main.rs  ui.rs
