[package]
name = "rs-arcade"
version = "0.1.0"
authors = ["Arden Rasmussen <ardenisthebest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez="*"
serde = { version = "*", features = ["derive"] }
serde_json="*"
derive_builder="*"
